--- a/Makefile.common
+++ b/Makefile.common
@@ -1,5 +1,88 @@
 # -*- Makefile -*-
 
+# This is a common Makefile that can be used as the core buildsystem for
+# projects providing a library and some executables using this library. Simple example:
+#
+#
+#    PROJECT_NAME := gltk
+#    ABI_VERSION  := 0
+#    TAIL_VERSION := 1
+#
+#    LIB_SOURCES := Gltk_Fl_Window.cc gltk.c gltk_control.c gltk_plot.c gltk_test_cmdline.c
+#    BIN_SOURCES := gltk_test.cc
+#
+#    CCXXFLAGS += $(foreach s,parameter variable but-set-variable,-Wno-unused-$s)
+#
+#    LDLIBS := -lfltk -lfltk_gl -lGL -lGLU -lglut
+#
+#    DIST_BIN_EXCEPT     := *_test
+#    DIST_INCLUDE_EXCEPT := *_test_*
+#
+#
+#    include /usr/include/mrbuild/Makefile.common
+#    -include *.d
+#
+
+# So we define some variables to set up our project, and the thing works. This
+# is a plain Makefile, so things that work in plain Makefiles work here. You can
+# define your own rules, dependencies and variables. Things like per-target
+# variables should work.
+#
+# Variables that MUST be defined:
+#
+#     PROJECT_NAME  The name of the project. Ends up in the SONAME. Libraries
+#                   may or may not be called lib..., but the "lib" will be
+#                   prepended to the SONAME if it's missing
+#
+#     ABI_VERSION   An integer indicating the version of the ABI. Usually the
+#                   same as the major version number of the project
+#
+#     TAIL_VERSION  An arbitrary string. The full version is
+#                   ABI_VERSION.TAIL_VERSION
+#
+# Either of these two MUST be defined:
+#
+#     LIB_SOURCES   Sources to build into a library
+#
+#     BIN_SOURCES   Sources to build into executables. By default each executable
+#                   will be built from the library and each source in
+#                   BIN_SOURCES. To do anything else, tell Make about it the
+#                   usual way.
+#
+# Variables that MAY be defined:
+#
+#     CFLAGS	    Flags for C, C++, the preprocessor and both respectively. By
+#     CXXFLAGS	    default we pass -O3 and (for C++) -std=c++0x. If we specify
+#     CCXXFLAGS	    any other optimization level or standard, the defaults will
+#     CPPFLAGS      be omitted. To make commandline-based options work, touch
+#                   these with +=
+#
+#     LDFLAGS       Similar to the above. The linker flags
+#
+#     LDLIBS        Similar to the above. The libraries we link with. By default this
+#                   applies to all objects, libraries and executables we build
+#
+#     DIST_BIN      Executables and headers (respectively) that we distribute. May
+#     DIST_INCLUDE  include wildcards.
+#
+#     DIST_BIN_EXCEPT   Distribution blacklists. May include wildcards.
+#     DIST_INCLUDE_EXCEPT
+#
+#     EXTRA_CLEAN   Additional target to clean out during a 'make clean'
+
+
+
+# Make sure I have the variables that must be defined
+MUST_DEF_VARIABLES        := PROJECT_NAME ABI_VERSION TAIL_VERSION
+MUST_DEF_VARIABLES_EITHER := LIB_SOURCES BIN_SOURCES
+$(foreach v,$(MUST_DEF_VARIABLES),$(if $($v),,$(error User MUST specify $v)))
+$(if $(strip $(foreach v,$(MUST_DEF_VARIABLES_EITHER),${$v})),,$(error User MUST specify at least one of ${MUST_DEF_VARIABLES_EITHER}))
+
+
+
+VERSION := $(ABI_VERSION).$(TAIL_VERSION)
+
+# Default compilers. By default, we use g++ as a linker
 CC        ?= gcc
 CXX       ?= g++
 CC_LINKER ?= $(CXX)
@@ -9,49 +92,34 @@ CC_LINKER ?= $(CXX)
 # bottom of this file
 CCXXFLAGS += -MMD -MP
 
-# always building with debug information. This is stripped into the -dbg
-# packages by debhelper later
+# always building with debug information. This is stripped into the
+# -dbg/-debuginfo packages by debhelper/rpm later
 CCXXFLAGS += -g
-
-# if no explicit optimization flags are given, optimize!
-ifeq (,$(filter -O%,$(CCXXFLAGS)))
-  CCXXFLAGS := $(CCXXFLAGS) -O3
-endif
 
 # I want the frame pointer. Makes walking the stack WAY easier
 CCXXFLAGS += -fno-omit-frame-pointer
 
-
+# We like to put headers into their own directory, so I tell the compiler about it
 CCXXFLAGS += -Iinclude
-CXXFLAGS += -std=c++0x
 
-CCXXFLAGS +=					\
--DCDAS_CORE_SHARED_EXPORTS			\
--Wall						\
--Werror						\
--DCDAS_DEBUG					\
--fno-inline
+# all warnings by default
+CCXXFLAGS += -Wall -Wextra
 
-
-LIB_SOURCES := $(wildcard $(addprefix src/*.,cpp cc C c cxx))
-BIN_SOURCES := $(wildcard $(addprefix bin/*.,cpp cc C c cxx))
-OBJECTS := $(SOURCES:.cpp=.o)
-
-# default targetname comes from the directory name
-ifeq (,$(TARGET_NAME))
-  $(error User MUST specify the TARGET_NAME. I do not know \
-how to infer that from the directory, and work for debian \
-AND redhat both in-tree AND from a tarball)
-endif
-
-# if the TARGET_NAME is lib..., LIB_NAME is the same, otherwise prepend 'lib'
-LIB_NAME           := $(if $(filter lib%,$(TARGET_NAME)),,lib)$(TARGET_NAME)
-LIB_TARGET_SO_BARE := $(LIB_NAME).so
-LIB_TARGET_SO	   := $(LIB_TARGET_SO_BARE).$(SO_VERSION)
-LIB_TARGET_A       := $(LIB_NAME).a
-
+LIB_SOURCES ?= $(wildcard $(addprefix src/*.,cpp cc C c cxx))
+BIN_SOURCES ?= $(wildcard $(addprefix bin/*.,cpp cc C c cxx))
 LIB_OBJECTS := $(addsuffix .o,$(basename $(LIB_SOURCES)))
 BIN_OBJECTS := $(addsuffix .o,$(basename $(BIN_SOURCES)))
+
+
+# if the PROJECT_NAME is libxxx then LIB_NAME is libxxx
+# if the PROJECT_NAME is xxx    then LIB_NAME is libxxx
+LIB_NAME           := $(or $(filter lib%,$(PROJECT_NAME)),lib$(PROJECT_NAME))
+LIB_TARGET_SO_BARE := $(LIB_NAME).so
+LIB_TARGET_SO	   := $(LIB_TARGET_SO_BARE).$(VERSION)
+LIB_TARGET_A       := $(LIB_NAME).a
+
+BIN_TARGETS := $(basename $(BIN_SOURCES))
+
 
 # all objects built for inclusion in shared libraries get -fPIC. This is
 # sub-optimal, since it adds the -fPIC overhead even if linking these
@@ -59,33 +127,34 @@ BIN_OBJECTS := $(addsuffix .o,$(basename $(BIN_SOURCES)))
 $(LIB_OBJECTS): CCXXFLAGS += -fPIC
 
 
-BIN_TARGETS := $(basename $(BIN_SOURCES))
 
-# I make sure to give the .o to the linker before the .so and everything else.
-# The .o may depend on the other stuff.
-define gen_bintarget_dep =
-$1: $1.o
-	$$(CC_LINKER) $$(LDFLAGS)		\
-		$$(filter %.o, $$^)		\
-		$$(filter-out %.o, $$^)		\
-		$$(LDLIBS) -o $$@
+
+# These are here to process the options separately for each file being built.
+# This allows per-target options to be set
+#
+# if no explicit optimization flags are given, optimize
+define massageopts
+$1 $(if $(filter -O%,$1),,-O3)
 endef
-$(foreach t,$(BIN_TARGETS),$(eval $(call gen_bintarget_dep,$t)))
-# I statically link the library if I'm not installing; if I'm installing use dynamic linking
-ifneq (,$(filter $(MAKECMDGOALS),install))
-  $(BIN_TARGETS): $(LIB_TARGET_SO)
-else
-  $(BIN_TARGETS): $(LIB_TARGET_A)
-endif
 
+# If no C++ standard requested, I default to c++0x
+define massageopts_cxx
+$(call massageopts,$1 $(if $(filter -std=%,$1),,-std=c++0x))
+endef
+
+define massageopts_c
+$(call massageopts,$1)
+endef
 
 
 
 # define the compile rules. I need to redefine the rules here because my
 # C..FLAGS variables are simple (immediately evaluated), but the user
 # could have specified per-target flags that ALWAYS evaluate deferred-ly
-cc_build_rule = $(CXX) $(CXXFLAGS) $(CCXXFLAGS) -c -o $@ $<
-c_build_rule  = $(CC)  $(CFLAGS)   $(CCXXFLAGS) -c -o $@ $<
+cc_build_rule = $(CXX) $(call massageopts_cxx,$(CXXFLAGS) $(CCXXFLAGS) $(CPPFLAGS)) -c -o $@ $<
+c_build_rule  = $(CC)  $(call massageopts_c,  $(CFLAGS)   $(CCXXFLAGS) $(CPPFLAGS)) -c -o $@ $<
+
+
 %.o:%.C
 	$(cc_build_rule)
 %.o:%.cc
@@ -97,148 +166,83 @@ c_build_rule  = $(CC)  $(CFLAGS)   $(CCXXFLAGS) -c -o $@ $<
 %.o: %.S
 	$(CC) $(ASFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-$(LIB_TARGET_A): $(LIB_OBJECTS)
-	ar rcv $@ $^
+# We like to gengetopt things, and this rules does it
+%.h %.c: %.ggo
+	gengetopt -C -u -g $(VERSION) -i $< -F $* args -f $* -a $*
+ALLGGO := $(wildcard *.ggo)
+ifneq (,$(ALLGGO))
+$(patsubst %.ggo,%.o,$(ALLGGO)): CCXXFLAGS += -DVERSION='"$(VERSION)"'
+endif
 
 
-all: $(LIB_TARGET_SO) $(LIB_TARGET_A) $(BIN_TARGETS)
+
+# by default I build shared libraries only. We known how to build static
+# libraries too, but I don't do it unless asked
+all: $(LIB_TARGET_SO) $(BIN_TARGETS)
 .PHONY: all
 .DEFAULT_GOAL := all
 
-clean:
-	rm -rf src/*.o bin/*.o $(BIN_TARGETS) *.so *.so.* *.a
-.PHONY: clean
 
+
+$(LIB_TARGET_SO): LDFLAGS += -shared -Wl,--default-symver -fPIC -Wl,-soname,$(notdir $(LIB_TARGET_SO_BARE)).$(ABI_VERSION)
 
 
 # Here instead of specifying $^, I do just the %.o parts and then the
 # others. This is required to make the linker happy to see the dependent
-# objects first and the dependency objects last
-$(LIB_TARGET_SO): LDFLAGS += -shared -Wl,--default-symver -fPIC -Wl,-soname,$(notdir $(LIB_TARGET_SO_BARE)).$(ABI_VERSION)
-
-
+# objects first and the dependency objects last. Same as for BIN_TARGETS
 $(LIB_TARGET_SO_BARE) $(LIB_TARGET_SO_BARE).$(ABI_VERSION): | $(LIB_TARGET_SO)
 $(LIB_TARGET_SO): $(LIB_OBJECTS)
-	$(CC_LINKER) $(LDFLAGS) $^ $(LDLIBS) -o $@
+	$(CC_LINKER) $(LDFLAGS) $(filter %.o, $^) $(filter-out %.o, $^) $(LDLIBS) -o $@
 	ln -fs $(notdir $@) $(LIB_TARGET_SO_BARE)
 	ln -fs $(notdir $@) $(LIB_TARGET_SO_BARE).$(ABI_VERSION)
 
+$(LIB_TARGET_A): $(LIB_OBJECTS)
+	ar rcv $@ $^
+
+# I make sure to give the .o to the linker before the .so and everything else.
+# The .o may depend on the other stuff.
+$(BIN_TARGETS): %: %.o
+	$(CC_LINKER) $(LDFLAGS) $(filter %.o, $^) $(filter-out %.o, $^) $(LDLIBS) -o $@
+
+# The binaries link with the DSO, and get an rpath (removed at install time)
+$(BIN_TARGETS): $(LIB_TARGET_SO)
+$(BIN_TARGETS): LDFLAGS += -Wl,-rpath=$(abspath .)
 
 
 
 
+clean:
+	rm -rf pod2htmi.tmp pod2htmd.tmp *.1 *-man.html *.a *.o *.so *.so.* *.d $(BIN_TARGETS) \
+               $(foreach s,.c .h,$(addsuffix $s,$(basename $(wildcard *.ggo)))) $(EXTRA_CLEAN)
+distclean: clean
+
+.PHONY: distclean clean
 
 
 
-
-
-# #################### clean and all and install rules ##################
-
-# # can't install unit tests
-# ifeq ($(IS_UNIT_TEST),)
-# include buildsystem/Makefile.install
-# endif
-
-# clean_files := $(addprefix $(dir)/, *.a *.o *.so *.so.*)
-# clean_files += pod2htmi.tmp pod2htmd.tmp $(addprefix $(dir)/, *.1 *-man.html)
-
-# clean_files += $(BIN_TARGET_ALL) $(EXTRACLEAN) $(LIB_OBJECTS) $(addsuffix .o,$(BIN_TARGET_ALL))
-
-# # This is done with an eval to immediately evaluate the files-to-clean list
-# define CLEAN_template
-# $(dir)/clean:
-# 	rm -rf $(clean_files) $(patsubst %.o,%.d,$(filter %.o,$(clean_files)))
-# endef
-# $(eval $(CLEAN_template))
-
-
-# $(dir)/all: $(LIB_TARGET_A) $(BIN_TARGET_ALL)
-
-# clean: $(dir)/clean
-# distclean: clean
-
-# # don't build unit tests unless asked
-# ifeq ($(IS_UNIT_TEST),)
-# all:   $(dir)/all
-# endif # ifeq ($(IS_UNIT_TEST),)
-
-# .PHONY: distclean clean all $(dir)/clean $(dir)/all
-
-
-
-
-
-
-
-
-
-
-# installation business
-
-# to lowercase, _ -> -
-PACKAGENAME_BASE = $(shell echo $(TARGET_NAME) | tr A-Z_ a-z-)
-
-# 'make install' logic:
-#   - if no DESTDIR set, then barf: 'make install' is for packaging only
-#   - if DESTDIR has "debian", split the install across debian packages
-#   - if DESTDIR has no "debian", just dump everything there
+########################### installation business
 
 ifneq (,$(filter install,$(MAKECMDGOALS)))
   ifeq  ($(strip $(DESTDIR)),)
-	  @echo Tried to make install without having DESTDIR defined
-	  @echo "make install" is ONLY for package building.
-	  @echo What are you trying to do?
-	  @false
+    $(error Tried to make install without having DESTDIR defined \
+"make install" is ONLY for package building. \
+What are you trying to do?)
   endif
-
-  ifneq (,$(findstring debian/,$(DESTDIR)))
-    # debian installation
-
-    # If the TARGET_NAME starts with 'lib', it's a library. Otherwise it's
-    # binaries. Libraries have -dev versions of their packages, have ABI_VERSIONs,
-    # and are allowed to have headers, .so, .a, etc. For each library I have 3
-    # packages:
-    #
-    # libblahN    : main library, N is a number that gets bumped up with each API chage
-    # libblah-dev : devel files (.a, .h, .pc)
-    # libblahN-dbg: just the debug symbols
-
-    ifeq ($(TARGET_NAME:lib%=lib),lib)
-      # library
-      PACKAGENAME   := $(PACKAGENAME_BASE)$(ABI_VERSION)
-      DESTDIR_DEV   := debian/$(PACKAGENAME)-dev
-      DESTDIR_TOOLS := debian/$(PACKAGENAME)-tools
-    else
-      # binary package
-      PACKAGENAME   := $(PACKAGENAME_BASE)
-      DESTDIR_TOOLS := debian/$(PACKAGENAME)
-    endif
-
-    DESTDIR_MAIN  := debian/$(PACKAGENAME)
-
-    # debian does /usr/lib/arch-specific-stuff
-    USRLIB := usr/lib
-
-  else
-    # non-debian installation. Just dump into $(DESTDIR)
-
-    DESTDIR_DEV   := $(DESTDIR)
-    DESTDIR_MAIN  := $(DESTDIR)
-    DESTDIR_TOOLS := $(DESTDIR)
-
-    # redhat does /usr/lib64 for x86-64. Don't know about other arches
-    USRLIB := usr/lib64
-  endif
-
 endif
 
-.PHONY: install
 
+DIST_BIN     := $(filter-out $(wildcard $(DIST_BIN_EXCEPT)), \
+                  $(or $(DIST_BIN),    $(BIN_TARGETS)))
+DIST_INCLUDE := $(filter-out $(wildcard $(DIST_INCLUDE_EXCEPT)), \
+                  $(or $(DIST_INCLUDE),$(wildcard                      *.h *.hh *.hpp *.H) \
+                                       $(wildcard $(addprefix include/,*.h *.hh *.hpp *.H))))
 
+DESTDIR_DEV   := $(DESTDIR)
+DESTDIR_MAIN  := $(DESTDIR)
+DESTDIR_TOOLS := $(DESTDIR)
 
-
-
-
+# assuming redhat only for the time being
+USRLIB := usr/lib64
 
 # using 'cp -P' instead of 'install' because the latter follows links unconditionally
 install: $(LIB_TARGET_A) $(LIB_TARGET_SO) $(LIB_TARGET_SO_BARE) $(LIB_TARGET_SO_BARE).$(ABI_VERSION) $(BIN_TARGETS)
@@ -248,20 +252,26 @@ ifneq ($(LIB_OBJECTS),) # install non-dev library (can be in a non-lib project)
 	cp -P $(LIB_TARGET_SO)  $(DESTDIR_MAIN)/$(USRLIB)
 	ln -fs $(notdir $(LIB_TARGET_SO)) $(DESTDIR_MAIN)/$(USRLIB)/$(notdir $(LIB_TARGET_SO_BARE)).$(ABI_VERSION)
 endif
-ifeq ($(TARGET_NAME:lib%=lib),lib) # install dev library (MUST be in a lib project)
-	mkdir -p $(DESTDIR_DEV)/$(USRLIB)/$(REPO_NAME_ABI_VERSIONED)
-	cp -P $(LIB_TARGET_A)   $(DESTDIR_DEV)/$(USRLIB)/$(REPO_NAME_ABI_VERSIONED)
-	ln -fs $(notdir $(LIB_TARGET_SO)) $(DESTDIR_DEV)/$(USRLIB)/$(REPO_NAME_ABI_VERSIONED)/$(notdir $(LIB_TARGET_SO_BARE))
+ifeq ($(PROJECT_NAME:lib%=lib),lib) # install dev library (MUST be in a lib project)
+	mkdir -p $(DESTDIR_DEV)/$(USRLIB)
+	cp -P $(LIB_TARGET_A)   $(DESTDIR_DEV)/$(USRLIB)
+	ln -fs $(notdir $(LIB_TARGET_SO)) $(DESTDIR_DEV)/$(USRLIB)/$(notdir $(LIB_TARGET_SO_BARE))
 endif
-ifneq ($(strip $(BIN_TARGETS)),)
-
+ifneq ($(strip $(DIST_BIN)),)
 	mkdir -p $(DESTDIR_TOOLS)/usr/bin
-	install -m 0755 $(BIN_TARGETS) $(DESTDIR_TOOLS)/usr/bin/
+	install -m 0755 $(DIST_BIN) $(DESTDIR_TOOLS)/usr/bin/
+	chrpath -d $(DESTDIR_TOOLS)/usr/bin/*
 endif
+ifneq ($(strip $(DIST_INCLUDE)),)
 	mkdir -p $(DESTDIR_DEV)/usr/include
-	cp -r include/* $(DESTDIR_DEV)/usr/include
+	cp -r $(DIST_INCLUDE) $(DESTDIR_DEV)/usr/include
+endif
+.PHONY: install
 
 
+
+# I want to keep all the intermediate files always
+.SECONDARY:
 
 # the header dependencies
 -include *.d
