I include the dependency files from all the source directories I know about

--- a/Makefile.common
+++ b/Makefile.common
@@ -303,5 +303,4 @@ endif
 .SECONDARY:
 
 # the header dependencies
--include *.d
-
+-include $(addsuffix *.d,$(sort $(dir $(LIB_SOURCES) $(BIN_SOURCES))))
