--- a/Makefile.common
+++ b/Makefile.common
@@ -207,7 +207,15 @@ c_build_rule  = $(strip $(CC)  $(call massageopts_c,  $(CFLAGS)   $(CCXXFLAGS) $
 %.h %.c: %.ggo
 	gengetopt -C -u -g $(VERSION) -i $< -F $* args -f $(notdir $*) -a $(notdir $*)
 
-
+# this is how you build QT4 UIs. There's a tool to generate headers from
+# UI definitions. There's also a tool to generate metadata from QT
+# classes. This must be compiled and linked in. QT4_MOCS is a list of
+# all these extra objects needed by QT. Simply add $(QT4_MOCS) to your
+# objects list and magic happens. Similar with QT4_UI_HEADERS
+ui_%.h: %.ui
+	uic-qt4 $< > $@
+moc_%.cpp: %.h
+	moc-qt4 $< > $@
 
 # by default I build shared libraries only. We known how to build static
 # libraries too, but I don't do it unless asked
@@ -242,7 +250,7 @@ $(BIN_TARGETS): LDFLAGS += -Wl,-rpath=$(abspath .)
 
 
 clean:
-	rm -rf $(foreach d,$(SOURCE_DIRS),$(addprefix $d,*.a *.o *.so *.so.* *.d)) $(BIN_TARGETS) $(foreach s,.c .h,$(addsuffix $s,$(basename $(shell find . -name *.ggo)))) $(EXTRA_CLEAN)
+	rm -rf $(foreach d,$(SOURCE_DIRS),$(addprefix $d,*.a *.o *.so *.so.* *.d moc_* ui_*.h)) $(BIN_TARGETS) $(foreach s,.c .h,$(addsuffix $s,$(basename $(shell find . -name *.ggo)))) $(EXTRA_CLEAN)
 distclean: clean
 
 .PHONY: distclean clean
