--- a/Makefile.common
+++ b/Makefile.common
@@ -73,8 +73,7 @@
 #     DIST_BIN      Executables that we distribute. May include wildcards. If omitted,
 #                   defaults to all the executables $(BIN_SOURCES) produce
 #
-#     DIST_INCLUDE  Headers that we distribute. May include wildcards.. If omitted,
-#                   defaults to all headers in . and include/
+#     DIST_INCLUDE  Headers that we distribute. May include wildcards.
 #
 #     DIST_BIN_EXCEPT      Simple distribution blacklists. May include wildcards. For
 #     DIST_INCLUDE_EXCEPT  anything fancier, use the ..._FINDSPEC variables described
@@ -300,9 +299,7 @@ DIST_INCLUDE_ORIG := $(DIST_INCLUDE)
 DIST_BIN     = $(filter-out $(wildcard $(DIST_BIN_EXCEPT)),		\
                   $(wildcard $(or $(DIST_BIN_ORIG),    $(BIN_TARGETS))))
 DIST_INCLUDE = $(filter-out $(wildcard $(DIST_INCLUDE_EXCEPT)),		\
-		  $(wildcard $(or $(DIST_INCLUDE_ORIG),				\
-                                  $(addprefix include/,*.h *.hh *.hpp *.H)	\
-                                              *.h *.hh *.hpp *.H)))
+		  $(wildcard $(DIST_INCLUDE_ORIG)))
 
 # assuming redhat only for the time being
 USRLIB := usr/lib64
